# ev-betting

./: .gitignore  README.md  config.example.toml  demo.py  import_all_leagues.py  import_historical_data.py  import_nba.py  import_nfl.py  import_soccer_results.py  pyproject.toml  test_api.py  test_odds.py
app/: cli.py  config.py  database.py  devig.py  models.py  scanner.py
app/modeling/: selector.py  soccer.py
app/providers/: base.py  manager.py  theodds_api.py
data/cache/models/: football_best.pkl  soccer_best.pkl
data/results/: value_bets.csv
ev_betting.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
