[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ev-betting"
version = "0.1.0"
description = "Automated +EV value betting scanner"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.6.0",
    "scikit-learn>=1.3.0",
]

[project.scripts]
evbet = "app.cli:app"

[tool.setuptools]
packages = ["app", "app.providers", "app.modeling"]